优化了rodmerge的逻辑